# ccv

./: .gitignore  CMakeLists.txt  sugar.cmake
lib/: CMakeLists.txt  sugar.cmake
lib/cuda/: sugar.cmake
lib/cuda/convnet/: sugar.cmake
lib/inl/: sugar.cmake
lib/io/: sugar.cmake
serve/: sugar.cmake
